# salesman

./: Cargo.toml  README.md  lcov.info
benches/: bench_simple_loop.rs
resources/blocks/: block00.txt  block01.txt
src/: anneal.rs  block.rs  cluster.rs  distance.rs  example.rs  genetic.rs  helper.rs  intersection.rs  lib.rs  main.rs  multi_anneal.rs  permute.rs  plot.rs  string.rs  untangle.rs  utils.rs
src/anneal/: cluster.rs  path.rs
src/anneal/cluster/: test_cluster.rs
src/block/: test_block.rs
src/cluster/: test_cluster.rs
src/genetic/: cluster.rs  cluster_old.rs
src/intersection/: test_intersection.rs
src/permute/: test_permute.rs
src/untangle/: test_untangle.rs
src/utils/: cluster.rs  math.rs  permute.rs  rand.rs  svg.rs
src/utils/untangle/: intersection.rs
tests/: salesman_test.rs
